# team_management

./: .env  README.md  docker-compose.yml  pyproject.toml  setup.cfg  tox.ini
apps/api/: .dockerignore  .gitignore  README.md  pyproject.toml  setup.cfg  tox.ini
apps/api/devops/images/api/: Dockerfile
apps/api/src/delivery/: config.py
apps/api/src/delivery/di/: __init__.py  database.py  teams.py
apps/api/src/delivery/web/: app.py
apps/api/src/delivery/web/api/rest/: teams.py
apps/api/src/domains/teams/: commands.py  entities.py  gateways.py  interfaces.py  queries.py
apps/api/src/gateways/: storage.py
apps/api/src/gateways/database/: base.py  tables.py
apps/api/src/gateways/teams/: storage.py
apps/web/: package.json
apps/web/conf/webpack/: webpack.config.js  webpack.prod.js
apps/web/devops/images/web/: Dockerfile
devops/images/: docker-compose.yml
devops/images/teams_management/: Dockerfile
src/teams_management/: utils.py
src/teams_management/delivery/: config.py
src/teams_management/delivery/di/: __init__.py  database.py  teams.py
src/teams_management/delivery/web/: app.py  run.py
src/teams_management/delivery/web/api/rest/: models.py  teams.py
src/teams_management/domains/teams/: commands.py  gateways.py  interfaces.py  queries.py
src/teams_management/gateways/: storage.py
src/teams_management/gateways/database/: base.py
src/teams_management/gateways/teams/: storage.py
tests/: __init__.py
tests/teams_management/: conftest.py  test_teams.py
tests/teams_management/helpers/: matchers.py
tests/teams_management/helpers/communication/: http.py  rest.py
